<resources>
    <string name="app_name" translatable="false">Popular Movies</string>
    <string name="error_message" translatable="false">Error Occurred. Please Retry Again.</string>
    <string name="movie_poster" translatable="false">Movie Poster</string>
    <string name="dummy_movie_title" translatable="false">Movie Title</string>
    <string name="most_popular" translatable="false">Most Popular</string>
    <string name="top_rated" translatable="false">Top Rated</string>
    <string name="sort" translatable="false">Sort</string>
    <string name="dummy_movie_rating" translatable="false">7.5</string>
    <string name="original_title" translatable="false">Original Title</string>
    <string name="overview" translatable="false">Overview</string>
    <string name="release_date" translatable="false">Release Date</string>
    <string name="vote" translatable="false">Vote</string>
    <string name="favorite_movie_icon" translatable="false">Mark Movie as Favorite</string>
    <string name="favorites" translatable="false">Favorites</string>
    <string name="no_favorites" translatable="false">No favorite movies were found.</string>
    <string name="dummy_text" translatable="false">Dummy Text</string>
    <string name="videos" translatable="false">Videos</string>
    <string name="dummy_author" translatable="false">barf burglar</string>
    <string name="reviews" translatable="false">Reviews</string>
    <string name="no_reviews" translatable="false">This movie does not have any reviews yet.</string>
    <string name="no_videos" translatable="false">This movie does not have any videos yet.</string>
    <string name="dummy_review" translatable="false">Just like the Matrix series, the John Wick series is the child of; interesting concepts, mediocre direction, bad writing, bad dialogue, fine (OK) acting and good to great fight choreography…   John Wick 3 outstays its welcome and becomes tedious with all the boring twists and uninspired resolutions.  you\'ll watch it once, forget it ever existed and then never watch it again</string>
    <string name="expand_review" translatable="false">Expand Review</string>
    <string name="check_internet" translatable="false">Check your internet connection and Retry.</string>
</resources>
