<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/original_title_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/inline_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/original_title"
            android:textSize="@dimen/details_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/original_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/details_text_size"
            android:layout_marginStart="@dimen/inline_horizontal_margin" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/release_date_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/inline_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:textSize="@dimen/details_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/release_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/details_text_size"
            android:layout_marginStart="@dimen/inline_horizontal_margin" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:textStyle="bold"
        android:textSize="@dimen/details_text_size"
        android:layout_marginStart="@dimen/inline_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/overview_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/details_text_size"
        android:layout_marginTop="@dimen/headline_bottom_margin"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="@dimen/inline_horizontal_margin"
        android:layout_marginEnd="@dimen/inline_horizontal_margin" />
</merge>