<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/inline_horizontal_margin"
    app:cardCornerRadius="6dp"
    app:cardElevation="@dimen/card_elevation">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:paddingTop="5dp">

        <ImageButton
            android:id="@+id/btn_expand"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@null"
            android:contentDescription="@string/expand_review"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:layout_marginEnd="0dp"
            android:src="@drawable/expand_review_selector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_content"/>

        <TextView
            android:id="@+id/tv_author"
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="start|center_vertical"
            android:textSize="@dimen/details_text_size"
            android:textStyle="italic|bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/dummy_author" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:maxLines="3"
            android:textSize="@dimen/details_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_author"
            tools:text="@string/dummy_review" />
    </android.support.constraint.ConstraintLayout>


<!--        <LinearLayout-->
<!--            android:orientation="vertical"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:padding="15dp">-->

<!--            <TextView-->
<!--                android:id="@+id/tv_author"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                style="@android:style/TextAppearance.DeviceDefault.Small"-->
<!--                android:textStyle="italic|bold"-->
<!--                android:fontFamily="sans-serif-condensed-medium"-->
<!--                android:layout_marginEnd="20dp"-->
<!--                tools:text="@string/dummy_author"-->
<!--                android:textSize="@dimen/details_text_size"-->
<!--                android:gravity="center_vertical"/>-->

<!--            <TextView-->
<!--                android:id="@+id/tv_content"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:ellipsize="end"-->
<!--                android:maxLines="3"-->
<!--                android:layout_gravity="center_vertical"-->
<!--                tools:text="@string/dummy_review"-->
<!--                android:textSize="@dimen/details_text_size" />-->

<!--        </LinearLayout>-->
</android.support.v7.widget.CardView>
